--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,8 @@ html, body {
   font-family: 'Exo 2', sans-serif;
 }
 
-
+.text-gradient {
+  background: -webkit-linear-gradient(0deg, #0068FF, #02C166);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
